# surfaceharvester2.0

./: .gitignore  DATABASE_MIGRATION_REPORT.md  LICENSE.md  QUICK_START_REPORTS.md  README.md  REPORTS_README.md  VULNERABILITY_SYSTEM.md  VULNX_INTEGRATION.md  check_scan_results.py  cli.py  config.py  config_logging.py  conftest.py  context7.json  db_functions_report.md  debug_scan_results.py  dir_wordlist.txt  main.py  pyproject.toml  reports.py  reports_manager.py  scan_results.db.backup_20250819_201518  scan_results.db.backup_20250819_203450  scan_results.db.backup_20250819_203641  shvs.py  simple_db_test.py  test_ai_parser.py  test_db_functions.py  test_nuclei_info_severity.py  test_vulnerability_manager.py  test_wordlist.txt  verify_database_config.py
db/: models.py  report.py  schema.py  vulnerability_manager.py  vulnx_schema.sql
scanner/: ai_parser.py  cve_monitor.py  full_scanner.py  nikto.py  nuclei.py  parser.py  surface_harvester.py  vulnx_processor.py  wapiti.py
tests/: test_basic.py  test_surface_harvester.py
