[tool.poetry]
name = "surfaceharvester"
version = "0.1.0"
description = "Автоматизированный сбор информации о поверхности (сканирование портов, директорий, субдоменов, контактов)."
authors = ["Ваше Имя <your@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8"
beautifulsoup4 = "^4.12"
lxml = "^4.9"
requests = "^2.31"
spacy = "^3.7.0"
nltk = "^3.8.1"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
validators = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
surfaceharvester = "cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"